--- a/.github/workflows/dependent-jobx.yml
+++ b/.github/workflows/dependent-jobx.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: First step in windows job
-      run: date
+    - run: date
   job_on_macos:
     needs: [job_on_ubuntu, job_on_windows]
     runs-on: macos-latest
