--- a/.github/workflows/dependent-jobx.yml
+++ b/.github/workflows/dependent-jobx.yml
@@ -6,26 +6,27 @@ jobs:
   job_on_ubuntu:
     runs-on: ubuntu-latest
     steps: 
-    - run: date
+      - run: date
+
   job_on_windows:
     name: A windows job!
     runs-on: windows-latest
     steps:
-    - name: First step in windows job
-    - run: date
+      - name: First step in windows job
+        run: date
+
   job_on_macos:
     needs: [job_on_ubuntu, job_on_windows]
     runs-on: macos-latest
     name: A job that runs on Mac after first two jobs
     steps:
-    - run: pwd
-    - name: new step
-    - run: ls
+      - run: pwd
+      - name: new step
+        run: ls
+
   Final_job:
     needs: job_on_macos
     runs-on: ubuntu-latest
     name: A final job
     steps:
-    - run: echo A potato flew around my room
-    
-    
+      - run: echo "A potato flew around my room"
